# PyramidMeshSolver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
data/: gridInfo.txt
data/input/: allBoundaryNodes  boundaries.txt  gridInfo.txt
data/output/: elements.txt  nodes.txt  result.txt
include/: element.h  fem.h  grid.h  integrator.h  mathUtils.h  msg.h  phi.h  slae.h
python/: draw.py  testLocal.py
src/: fem.cpp  ff.cpp  grid.cpp  integrator.cpp  main.cpp  mathUtils.cpp  msg.cpp  slae.cpp
